--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Georgie Saunders</title>
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="scr/style.css" />
   </head>
   <body>
     <div class="contrainer">
@@ -133,6 +133,6 @@
       </div>
       <hr />
     </div>
-    <script src="src/script.js"></script>
+    <script src="scr/script.js"></script>
   </body>
 </html>
