--- a/index.html
+++ b/index.html
@@ -7,132 +7,112 @@
     <link rel="stylesheet" href="scr/style.css" />
   </head>
   <body>
-    <div class="contrainer">
-      <h1>GEORGIE SAUNDERS</h1>
-      <div class="menu">
-        <h4>
-          <a href="#1">KEY SKILLS</a> - <a href="#2">QUALIFICATIONS</a> -
-          <a href="#3">CONTACT</a>
-        </h4>
-      </div>
-      <hr />
-      <div class="about">
-        <p>Hey there, I'm Georgie 👋</p>
+    <h1>GEORGIE SAUNDERS</h1>
+    <hr />
+    <p>Hey there, I'm Georgie 👋</p>
+    <p>
+      I'm a content designer/user research. I'm also a web developer in the
+      making (watch this space, <em>literally</em>).
+    </p>
+    <p>
+      As designers, our work only matters if it works for you, the user! I'm all
+      about making technology and content accesible for everyone. I'm here to
+      advocate for users until my heart is, and their needs are, content. Excuse
+      the pun.
+    </p>
+    <p>
+      Here you will find a little bit about me, my skills and some cool things
+      I've done.
+    </p>
+    <p>Thanks for stopping by!</p>
+    <h3>CONTENT DESIGN AND DEVELOPMENT</h3>
+    <p>
+      Experienced in writing and structuring complex information in line with
+      user needs.
+    </p>
+    <p>
+      Knowledge of best practice principles for writing for the web and ability
+      to apply these to varying contexts/topics
+    </p>
+    <p>
+      Experience managing content review, approval and publishing processes with
+      key stakeholders.
+    </p>
+    <p>
+      Increased scale and reach of messages through engaging, relevant and
+      timely content.
+    </p>
+
+    <h3>USER RESEARCH</h3>
+    <p>Conducts research with users applying a range of methodologies.</p>
+    <p>
+      Identifies and extracts key opportunities to develop high impact designs
+      and recommendations.
+    </p>
+    <p>
+      Develops user personas, journey maps, conceptual models, and optimised
+      processes articulated through user research and service design blueprints.
+    </p>
+    <p>Prepares and presents findings in a compelling and meaningful way.</p>
+
+    <h3>TECHNICAL SKILLS AND TOOLS</h3>
+    <p>
+      Extensive experience in a range of platforms when developing content and
+      managing workflows, such as Confluence, GatherContent, Hemmingway and
+      Figma.
+    </p>
+    <p>
+      Data analysis, finding insights and recommendations from tools such as
+      Google Analytics.
+    </p>
+    <p>Strong HTML and CSS coding knowledge.</p>
+    <p>Other tools: miro, typeform, azure, atlassian suite.</p>
+
+    <h3>AGILE DELIVERY</h3>
+    <p>
+      Apply agile principles, values, techniques and tools in service delivery
+      and product development.
+    </p>
+    <p>Experience in using agile tools such as Jira and Azure.</p>
+
+    <hr />
+    <h2>QUALIFICATIONS AND TRAINING</h2>
+    <hr />
+    <ul>
+      <li>
         <p>
-          I'm a content designer/user research. I'm also a web developer in the
-          making (watch this space, <em>literally</em>).
+          BACHELOR OF COMMUNICATION IN MEDIA AND PUBLIC AFFAIRS (2014 – 2019)
         </p>
-        <p>
-          As designers, our work only matters if it works for you, the user! I'm
-          all about making technology and content accesible for everyone. I'm
-          here to advocate for users until my heart is, and their needs are,
-          content. Excuse the pun.
-        </p>
-        <p>
-          Here you will find a little bit about me, my skills and some cool
-          things I've done.
-        </p>
-        <p>Thanks for stopping by!</p>
-      </div>
-      <hr />
-      <h2><a id="1" name="1">KEY SKILLS</a></h2>
-      <hr />
-      <div class="skills">
-        <h3>CONTENT DESIGN AND DEVELOPMENT</h3>
-        <p>
-          Experienced in writing and structuring complex information in line
-          with user needs.
-        </p>
-        <p>
-          Knowledge of best practice principles for writing for the web and
-          ability to apply these to varying contexts/topics
-        </p>
-        <p>
-          Experience managing content review, approval and publishing processes
-          with key stakeholders.
-        </p>
-        <p>
-          Increased scale and reach of messages through engaging, relevant and
-          timely content.
-        </p>
-      </div>
-      <div class="skills">
-        <h3>USER RESEARCH</h3>
-        <p>Conducts research with users applying a range of methodologies.</p>
-        <p>
-          Identifies and extracts key opportunities to develop high impact
-          designs and recommendations.
-        </p>
-        <p>
-          Develops user personas, journey maps, conceptual models, and optimised
-          processes articulated through user research and service design
-          blueprints.
-        </p>
-        <p>
-          Prepares and presents findings in a compelling and meaningful way.
-        </p>
-      </div>
-      <div class="skills">
-        <h3>TECHNICAL SKILLS AND TOOLS</h3>
-        <p>
-          Extensive experience in a range of platforms when developing content
-          and managing workflows, such as Confluence, GatherContent, Hemmingway
-          and Figma.
-        </p>
-        <p>
-          Data analysis, finding insights and recommendations from tools such as
-          Google Analytics.
-        </p>
-        <p>Strong HTML and CSS coding knowledge.</p>
-        <p>Other tools: miro, typeform, azure, atlassian suite.</p>
-      </div>
-      <div class="skills">
-        <h3>AGILE DELIVERY</h3>
-        <p>
-          Apply agile principles, values, techniques and tools in service
-          delivery and product development.
-        </p>
-        <p>Experience in using agile tools such as Jira and Azure.</p>
-      </div>
-      <hr />
-      <h2><a id="2" name="2">QUALIFICATIONS AND TRAINING</a></h2>
-      <hr />
-      <ul>
-        <li>
-          <p>
-            BACHELOR OF COMMUNICATION IN MEDIA AND PUBLIC AFFAIRS (2014 – 2019)
-          </p>
-          <p><em>University of Canberra</em></p>
-        </li>
-        <li>
-          <p>WEB DEVELOPMENT PRO (2022)</p>
-          <p><em>SheCodes</em></p>
-        </li>
-        <li>
-          <p>TRANSFORM DATA INTO ACTIONABLE INSIGHTS (2022)</p>
-          <p><em>Propel Design</em></p>
-        </li>
-        <li>
-          <p>CONTENT DESIGN: 2 DAY COURSE (2021)</p>
-          <p><em>Content Design London</em></p>
-        </li>
-        <li>
-          <p>UX DESIGN FUNDAMENTALS (2019)</p>
-          <p><em>Academy Xi</em></p>
-        </li>
-      </ul>
-      <hr />
-      <div class="contact">
-        <h3><a id="3" name="3">CONTACT</a></h3>
-        <p><a href="tel:0411821279">0411 821 279</a></p>
-        <p>
-          <a href="mailto:georgie.saunders2@gmail.com"
-            >georgie.saunders2@gmail.com</a
-          >
-        </p>
-      </div>
-      <hr />
+        <p><em>University of Canberra</em></p>
+      </li>
+      <li>
+        <p>WEB DEVELOPMENT PRO (2022)</p>
+        <p><em>SheCodes</em></p>
+      </li>
+      <li>
+        <p>TRANSFORM DATA INTO ACTIONABLE INSIGHTS (2022)</p>
+        <p><em>Propel Design</em></p>
+      </li>
+      <li>
+        <p>CONTENT DESIGN: 2 DAY COURSE (2021)</p>
+        <p><em>Content Design London</em></p>
+      </li>
+      <li>
+        <p>UX DESIGN FUNDAMENTALS (2019)</p>
+        <p><em>Academy Xi</em></p>
+      </li>
+    </ul>
+    <hr />
+    <div class="contact">
+      <h3><CONTACT</h3>
+      <p><a href="tel:0411821279">0411 821 279</a></p>
+      <p>
+        <a href="mailto:georgie.saunders2@gmail.com"
+          >georgie.saunders2@gmail.com</a
+        >
+      </p>
     </div>
+    <hr />
     <script src="scr/script.js"></script>
   </body>
 </html>
