--- a/index.html
+++ b/index.html
@@ -4,115 +4,166 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Georgie Saunders</title>
-    <link rel="stylesheet" href="scr/style.css" />
+    <link rel="stylesheet" href="src/src.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>GEORGIE SAUNDERS</h1>
-    <hr />
-    <p>Hey there, I'm Georgie 👋</p>
-    <p>
-      I'm a content designer/user research. I'm also a web developer in the
-      making (watch this space, <em>literally</em>).
-    </p>
-    <p>
-      As designers, our work only matters if it works for you, the user! I'm all
-      about making technology and content accesible for everyone. I'm here to
-      advocate for users until my heart is, and their needs are, content. Excuse
-      the pun.
-    </p>
-    <p>
-      Here you will find a little bit about me, my skills and some cool things
-      I've done.
-    </p>
-    <p>Thanks for stopping by!</p>
-    <h3>CONTENT DESIGN AND DEVELOPMENT</h3>
-    <p>
-      Experienced in writing and structuring complex information in line with
-      user needs.
-    </p>
-    <p>
-      Knowledge of best practice principles for writing for the web and ability
-      to apply these to varying contexts/topics
-    </p>
-    <p>
-      Experience managing content review, approval and publishing processes with
-      key stakeholders.
-    </p>
-    <p>
-      Increased scale and reach of messages through engaging, relevant and
-      timely content.
-    </p>
-
-    <h3>USER RESEARCH</h3>
-    <p>Conducts research with users applying a range of methodologies.</p>
-    <p>
-      Identifies and extracts key opportunities to develop high impact designs
-      and recommendations.
-    </p>
-    <p>
-      Develops user personas, journey maps, conceptual models, and optimised
-      processes articulated through user research and service design blueprints.
-    </p>
-    <p>Prepares and presents findings in a compelling and meaningful way.</p>
-
-    <h3>TECHNICAL SKILLS AND TOOLS</h3>
-    <p>
-      Extensive experience in a range of platforms when developing content and
-      managing workflows, such as Confluence, GatherContent, Hemmingway and
-      Figma.
-    </p>
-    <p>
-      Data analysis, finding insights and recommendations from tools such as
-      Google Analytics.
-    </p>
-    <p>Strong HTML and CSS coding knowledge.</p>
-    <p>Other tools: miro, typeform, azure, atlassian suite.</p>
-
-    <h3>AGILE DELIVERY</h3>
-    <p>
-      Apply agile principles, values, techniques and tools in service delivery
-      and product development.
-    </p>
-    <p>Experience in using agile tools such as Jira and Azure.</p>
-
-    <hr />
-    <h2>QUALIFICATIONS AND TRAINING</h2>
-    <hr />
-    <ul>
-      <li>
-        <p>
-          BACHELOR OF COMMUNICATION IN MEDIA AND PUBLIC AFFAIRS (2014 – 2019)
-        </p>
-        <p><em>University of Canberra</em></p>
-      </li>
-      <li>
-        <p>WEB DEVELOPMENT PRO (2022)</p>
-        <p><em>SheCodes</em></p>
-      </li>
-      <li>
-        <p>TRANSFORM DATA INTO ACTIONABLE INSIGHTS (2022)</p>
-        <p><em>Propel Design</em></p>
-      </li>
-      <li>
-        <p>CONTENT DESIGN: 2 DAY COURSE (2021)</p>
-        <p><em>Content Design London</em></p>
-      </li>
-      <li>
-        <p>UX DESIGN FUNDAMENTALS (2019)</p>
-        <p><em>Academy Xi</em></p>
-      </li>
-    </ul>
-    <hr />
-    <div class="contact">
-      <h3><CONTACT</h3>
-      <p><a href="tel:0411821279">0411 821 279</a></p>
+    <div class="container">
+      <div class="row page-header">
+        <div class="col-7">
+          <h1>GEORGIE SAUNDERS</h1>
+          <span class="subtile">
+            <p><em>Designer, researcher and developer.</em></p>
+          </span>
+        </div>
+      </div>
+      <hr />
+      <p>Hey there, I'm Georgie 👋</p>
       <p>
-        <a href="mailto:georgie.saunders2@gmail.com"
-          >georgie.saunders2@gmail.com</a
-        >
+        I'm a content designer/user research. I'm also a web developer in the
+        making (watch this space, <em>literally</em>).
       </p>
+      <p>
+        As designers, our work only matters if it works for you, the user! I'm
+        all about making technology and content accesible for everyone. I'm here
+        to advocate for users until my heart is, and their needs are, content.
+        Excuse the pun.
+      </p>
+      <p>
+        Here you will find a little bit about me, my skills and some cool things
+        I've done.
+      </p>
+      <p>Thanks for stopping by!</p>
+
+      <hr />
+
+      <h2>Key skills</h2>
+      <hr />
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h3>Content design</h3>
+              <p>
+                Experienced in writing and structuring complex information in
+                line with user needs.
+              </p>
+              <p>
+                Knowledge of best practice principles for writing for the web
+                and ability to apply these to varying contexts/topics
+              </p>
+              <p>
+                Experience managing content review, approval and publishing
+                processes with key stakeholders.
+              </p>
+              <p>
+                Increased scale and reach of messages through engaging, relevant
+                and timely content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h3>User research</h3>
+              <p>
+                Conducts research with users applying a range of methodologies.
+              </p>
+              <p>
+                Identifies and extracts key opportunities to develop high impact
+                designs and recommendations.
+              </p>
+              <p>
+                Develops user personas, journey maps, conceptual models, and
+                optimised processes articulated through user research and
+                service design blueprints.
+              </p>
+              <p>
+                Prepares and presents findings in a compelling and meaningful
+                way.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h3>Technical skills and tools</h3>
+              <p>
+                Extensive experience in a range of platforms when developing
+                content and managing workflows, such as Confluence,
+                GatherContent, Hemmingway and Figma.
+              </p>
+              <p>
+                Data analysis, finding insights and recommendations from tools
+                such as Google Analytics.
+              </p>
+              <p>Strong HTML and CSS coding knowledge.</p>
+              <p>Other tools: miro, typeform, azure, atlassian suite.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h3>Agile delivery</h3>
+              <p>
+                Apply agile principles, values, techniques and tools in service
+                delivery and product development.
+              </p>
+              <p>Experience in using agile tools such as Jira and Azure.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <h2>Qualifications and training</h2>
+      <hr />
+      <ul>
+        <li>
+          <p>
+            BACHELOR OF COMMUNICATION IN MEDIA AND PUBLIC AFFAIRS (2014 – 2019)
+          </p>
+          <p><em>University of Canberra</em></p>
+        </li>
+        <li>
+          <p>WEB DEVELOPMENT PRO (2022)</p>
+          <p><em>SheCodes</em></p>
+        </li>
+        <li>
+          <p>TRANSFORM DATA INTO ACTIONABLE INSIGHTS (2022)</p>
+          <p><em>Propel Design</em></p>
+        </li>
+        <li>
+          <p>CONTENT DESIGN: 2 DAY COURSE (2021)</p>
+          <p><em>Content Design London</em></p>
+        </li>
+        <li>
+          <p>UX DESIGN FUNDAMENTALS (2019)</p>
+          <p><em>Academy Xi</em></p>
+        </li>
+      </ul>
+      <hr />
+      <div class="row page-footer">
+        <div class="col contact-details">
+          <p>☎️ Call me:</p>
+          <p>0411 821 279</p>
+        </div>
+        <div class="col contact-details">
+          <p>📧 Email me:</p>
+          <p>georgie.saunders2@gmail.com</p>
+        </div>
+      </div>
+      <hr />
+      <script src="src/src.js"></script>
     </div>
-    <hr />
-    <script src="scr/script.js"></script>
   </body>
 </html>
